vlib/v/checker/tests/inout/div_op_wrong_right_type_err_c.out
vlib/v/checker/tests/inout/div_op_wrong_right_type_err_c.v:3:10: error: right type of `/` cannot be type map_string_int
    1| fn main() {
    2|     a := map[string]int
    3|     10 / a
                ^
    4| }
